--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^19.2.1",
     "react-router-dom": "^7.10.1",
     "react-scripts": "5.0.1",
+    "sass": "^1.97.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
