--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "moment": "^2.30.1",
     "react": "^19.2.1",
     "react-dom": "^19.2.1",
+    "react-player": "^3.4.0",
     "react-router-dom": "^7.10.1",
     "react-scripts": "5.0.1",
     "sass": "^1.97.0",
