--- a/package.json
+++ b/package.json
@@ -17,9 +17,12 @@
     "react": "^19.2.1",
     "react-dom": "^19.2.1",
     "react-player": "^3.4.0",
+    "react-render-html": "^0.6.0",
     "react-router-dom": "^7.10.1",
     "react-scripts": "5.0.1",
     "sass": "^1.97.0",
+    "stream": "^0.0.3",
+    "util": "^0.12.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
